test/e2e/chainsaw/aigateway/model-route-selectors-pathparam/01-assert-programmed.yaml
apiVersion: aiconfiguration.konghq.com/v1alpha1
kind: AIGatewayModelProvider
metadata:
  name: openai-provider
  namespace: ($namespace)
status:
  (conditions[?type == 'Programmed']):
    - status: 'True'
  (id != null): true
---
apiVersion: aiconfiguration.konghq.com/v1alpha1
kind: AIGatewayModel
metadata:
  name: model-path-selector
  namespace: ($namespace)
status:
  (conditions[?type == 'Programmed']):
    - status: 'True'
  (id != null): true
